# tsuyu-rag-chatbot

./: .env.example  .gitignore  CHANGELOG-EN.md  CHANGELOG.md  Cargo.toml  DOCUMENT-GUIDE-EN.md  KESELAMATAN.md  LOCAL-DEV-SETUP-EN.md  MODEL-EN.md  MODEL.md  PANDUAN-DOKUMEN.md  PANDUAN-PENGGUNA.md  README-BM.md  README-EN.md  README.md  ROADMAP-EN.md  ROADMAP.md  RUNBOOK-EN.md  RUNBOOK.md  SECURITY-EN.md  SETUP-DEV-TEMPATAN.md  USER-GUIDE-EN.md  schema.sql
.sqlx/: query-0e0e9f225b947e4d43ae4b73b6a4a214316930187cfc040e24d00bc46c4885de.json  query-2e6718bb87f25078a003deec213a866359826b71f881ecae157145b2ae4fce4c.json  query-3a4d13874245944429bafa08d719b9dcaf920ca8a356049ccc276fa628da796f.json  query-44c7d82d46f9ec2d8ecb813e8f9faf3855cf590624dac9ed4c3f64f8ba294d54.json  query-5407857c23ac846fef36b20242c529ac35f801aec010c280aa3db1b778881b03.json  query-7a67ae0869cec6447e6296f37218875d8f3717b2b099aa09277752a567b46565.json  query-d83da601e20077c1245106bcbb077e4965571e0ef57c218daf626f401487dfa1.json  query-f63016a2f9999484bea3619e00b7cbffc52b170f8971df576e6542a2634fac51.json
deploy/: tsuyu-rag-ingest.service  tsuyu-rag-ingest.timer  tsuyu-rag.service
docs/: CONTOH.meta.json.example  contoh-cuti.txt
migrations/: 0001_initial.sql
src/: auth.rs  cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  ratelimit.rs  state.rs
src/handlers/: admin.rs  chat.rs  documents.rs  health.rs  ingest.rs  metrics.rs  mod.rs  sessions.rs
src/services/: character.rs  chunk.rs  documents.rs  embed.rs  generate.rs  ingest.rs  memory.rs  metadata.rs  mod.rs  rerank.rs  retrieve.rs  retry.rs
static/: index.html
templates/: admin.html  documents_table.html
tests/: integration.rs
