[package]
name = "tsuyu-rag-chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streaming (SSE) untuk jawapan token demi token
futures-util = "0.3"
async-stream = "0.3"

# Pembaca dokumen untuk ingest
pdf-extract = "0.7"   # PDF -> teks
zip = "2"             # DOCX = zip; kita baca word/document.xml
quick-xml = "0.36"    # tanggalkan tag XML dari DOCX

# Tokenizer sebenar (BPE cl100k_base) untuk kiraan token semasa chunking.
# Terbenam dalam binari — tiada fail luaran diperlukan.
tiktoken-rs = "0.6"

# Enjin templat (compile-time) untuk UI pengurusan dokumen yang dirender pelayan.
# Templat terbenam dalam binari semasa kompil — tiada fail luaran diperlukan.
askama = "0.12"

# Lindung rahsia config (DATABASE_URL, API key) — tak bocor dalam log/Debug,
# memori di-zero-kan apabila digugurkan. Dedah hanya melalui `.expose_secret()`.
secrecy = "0.8"

# Profil release (binari deploy): optimumkan untuk prestasi & saiz.
# Nota: `panic` sengaja dibiarkan "unwind" (lalai) — supaya panik dalam satu
# pengendali permintaan tidak menamatkan seluruh pelayan.
[profile.release]
opt-level = 3        # pengoptimuman penuh
lto = "thin"         # link-time optimization (imbangan prestasi vs masa kompil)
codegen-units = 1    # pengoptimuman merentas modul lebih baik
strip = true         # buang simbol nyahpepijat — binari lebih kecil
